--- a/package.json
+++ b/package.json
@@ -2,21 +2,40 @@
 	"name": "nft-minting-and-auction-app",
 	"version": "1.0.0",
 	"description": "NFT minting and auction app",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/fixfon/nft-mint-and-auction-app.git"
-	},
-	"keywords": [],
+		"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"bugs": {
 		"url": "https://github.com/fixfon/nft-mint-and-auction-app/issues"
 	},
 	"homepage": "https://github.com/fixfon/nft-mint-and-auction-app#readme",
+	"private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start"
+  },
+
+  "ct3aMetadata": {
+    "initVersion": "6.1.0"
+  },
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/fixfon/nft-mint-and-auction-app.git"
+	},
+    "dependencies": {
+    "@tanstack/react-query": "^4.10.0",
+    "@trpc/client": "10.0.0-proxy-beta.15",
+    "@trpc/next": "10.0.0-proxy-beta.15",
+    "@trpc/react": "10.0.0-proxy-beta.15",
+    "@trpc/server": "10.0.0-proxy-beta.15",
+    "next": "12.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "superjson": "1.9.1",
+    "zod": "^3.18.0"
+  },
 	"devDependencies": {
 		"@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
 		"@nomicfoundation/hardhat-toolbox": "^2.0.0",
@@ -26,6 +45,18 @@
 		"ethers": "^5.7.1",
 		"hardhat": "^2.11.2",
 		"ts-node": "^10.9.1",
-		"typescript": "^4.8.4"
+		 "@types/node": "18.0.0",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "18.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "autoprefixer": "^10.4.7",
+    "eslint": "8.22.0",
+    "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "tailwindcss": "^3.1.6",
+    "typescript": "^4.8.4"
 	}
 }
