--- a/package.json
+++ b/package.json
@@ -1,62 +1,69 @@
 {
-	"name": "nft-minting-and-auction-app",
-	"version": "1.0.0",
-	"description": "NFT minting and auction app",
-		"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/fixfon/nft-mint-and-auction-app/issues"
-	},
-	"homepage": "https://github.com/fixfon/nft-mint-and-auction-app#readme",
-	"private": true,
+  "name": "nft-minting-and-auction-app",
+  "version": "1.0.0",
+  "description": "NFT minting and auction app",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/fixfon/nft-mint-and-auction-app/issues"
+  },
+  "homepage": "https://github.com/fixfon/nft-mint-and-auction-app#readme",
+  "private": true,
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
   },
-
   "ct3aMetadata": {
     "initVersion": "6.1.0"
   },
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/fixfon/nft-mint-and-auction-app.git"
-	},
-    "dependencies": {
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fixfon/nft-mint-and-auction-app.git"
+  },
+  "dependencies": {
+    "@rainbow-me/rainbowkit": "^0.7.1",
     "@tanstack/react-query": "^4.10.0",
     "@trpc/client": "10.0.0-proxy-beta.15",
     "@trpc/next": "10.0.0-proxy-beta.15",
     "@trpc/react": "10.0.0-proxy-beta.15",
     "@trpc/server": "10.0.0-proxy-beta.15",
+    "ethers": "^5.7.1",
+    "framer-motion": "^7.5.3",
+    "moralis": "^2.6.4",
     "next": "12.3.1",
+    "next-auth": "^4.12.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
+    "wagmi": "^0.6.8",
     "zod": "^3.18.0"
   },
-	"devDependencies": {
-		"@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
-		"@nomicfoundation/hardhat-toolbox": "^2.0.0",
-		"@nomiclabs/hardhat-ethers": "^2.1.1",
-		"@openzeppelin/contracts": "^4.7.3",
-		"chai": "^4.3.6",
-		"ethers": "^5.7.1",
-		"hardhat": "^2.11.2",
-		"ts-node": "^10.9.1",
-		 "@types/node": "18.0.0",
+  "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.1.1",
+    "@nomiclabs/hardhat-etherscan": "^3.1.1",
+    "@openzeppelin/contracts": "^4.7.3",
+    "@types/debounce": "^1.2.1",
+    "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.7",
+    "chai": "^4.3.6",
     "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
+    "ethers": "^5.7.1",
+    "hardhat": "^2.11.2",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.6",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
-	}
+  }
 }
