Deleted unnecessarry modules

--- a/package.json
+++ b/package.json
@@ -26,12 +26,9 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^0.7.1",
     "@tanstack/react-query": "^4.10.0",
-    "@trpc/client": "10.0.0-proxy-beta.15",
-    "@trpc/next": "10.0.0-proxy-beta.15",
-    "@trpc/react": "10.0.0-proxy-beta.15",
-    "@trpc/server": "10.0.0-proxy-beta.15",
     "ethers": "^5.7.1",
     "framer-motion": "^7.5.3",
+    "moment": "^2.29.4",
     "moralis": "^2.6.4",
     "next": "12.3.1",
     "next-auth": "^4.12.3",
@@ -47,7 +44,6 @@
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.1",
     "@openzeppelin/contracts": "^4.7.3",
-    "@types/debounce": "^1.2.1",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
