Added extra functions and comments in contracts

--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,7 @@
 INFURA_GOERLI_ENDPOINT=
 ALCHEMY_GOERLI_ENDPOINT=
 DEPLOYER_PRIVATE_KEY=
+TEST_PRIVATE_KEY=
 MORALIS_API_KEY=
 ALCHEMY_API_KEY=
 ETHERSCAN_API_KEY=
