--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "hardhat": "^2.11.2",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.24",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.6",
     "ts-node": "^10.9.1",
